--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="0.2*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <DockPanel Background="#FFB899" Grid.Column="1"  DockPanel.Dock="Right" >
-            <TextBlock Background="#FF6324" TextAlignment="Center" Foreground="White" HorizontalAlignment="Stretch" DockPanel.Dock="Top">Entregados</TextBlock>
+            <TextBlock Padding="5" FontSize="15"   Background="#FF6324" TextAlignment="Center" Foreground="White" HorizontalAlignment="Stretch" DockPanel.Dock="Top">Entregados</TextBlock>
             <ScrollViewer VerticalScrollBarVisibility="Auto"   >
                 <ItemsControl ItemsSource="{Binding ListaEntregados}">
                     <ItemsControl.ItemTemplate>
@@ -39,21 +39,33 @@
             </ScrollViewer>
         </DockPanel>
         <DockPanel Grid.Column="0" Background="#FFEFD8" >
-           
-            <TextBlock Background="#2063EB" TextAlignment="Center" Foreground="White" HorizontalAlignment="Stretch" DockPanel.Dock="Top">DonMai Sushi Comandas</TextBlock>
-            <Button Width="100" Content="Iniciar" Padding="5" Command="{Binding inicio}" Margin="2" HorizontalAlignment="Center" Background="#253333" Foreground="White" DockPanel.Dock="Bottom" >
-            
+            <Border Padding="0" Margin="0" DockPanel.Dock="Top" >
+                <Border.Background>
+                    <ImageBrush ImageSource="/Assets/flores.png" Stretch="UniformToFill"></ImageBrush>
+                </Border.Background>
+                <TextBlock FontSize="15" Padding="5"  Margin="0" Foreground="White" Text="DonMai Sushi Comandas"  TextAlignment="Center" FontWeight="Bold" FontStyle="Italic"  HorizontalAlignment="Center" >
+                    <TextBlock.Effect>
+                        <DropShadowEffect></DropShadowEffect>
+                    </TextBlock.Effect>
+                </TextBlock>
+            </Border>
+            <Border Background="WhiteSmoke" DockPanel.Dock="Bottom" >
+        
+                <Button  Width="100" Content="Iniciar" Padding="5" Command="{Binding inicio}" Margin="2" HorizontalAlignment="Center" Background="#253333" Foreground="White"  >
+
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="5"/>
                         </Style>
                     </Button.Resources>
-       
-            </Button>
-            <ItemsControl VerticalAlignment="Top"  ItemsSource="{Binding ListaComandas}">
+
+                </Button>
+            </Border>
+              
+            <ItemsControl VerticalAlignment="Top"  HorizontalAlignment="Center" ItemsSource="{Binding ListaComandas}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Border  Height="380" Width="240"   BorderThickness="1" BorderBrush="#9E642A" Padding="0" Margin="5"  CornerRadius="15">
+                        <Border HorizontalAlignment="Left"  Height="380" Width="240"   BorderThickness="1" BorderBrush="#9E642A" Padding="0" Margin="5"  CornerRadius="15">
                             <Border.Background>
                                 <ImageBrush ImageSource="/Assets/sushi.png"></ImageBrush>
 
@@ -131,7 +143,7 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.Template>
                     <ControlTemplate >
-                        <ScrollViewer VerticalScrollBarVisibility="Auto"  CanContentScroll="True">
+                        <ScrollViewer VerticalScrollBarVisibility="Hidden"  CanContentScroll="True">
                             <ItemsPresenter>
 
                             </ItemsPresenter>
