--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -29,7 +29,7 @@
                                 <TextBlock   Foreground="White">Hora:</TextBlock>
                                     <TextBlock Margin="0,0,2,0" Foreground="White" Text="{Binding Fecha}"></TextBlock>
                                     <TextBlock   Foreground="White">Total:</TextBlock>
-                                <TextBlock  Foreground="White" Text="{Binding total}"></TextBlock>
+                                <TextBlock  Foreground="White" Text="{Binding Total}"></TextBlock>
                             </WrapPanel>
                             </Border>
 
@@ -77,8 +77,9 @@
 
                                 <StackPanel  Margin="5"    >
                                     <Label Content="{Binding Id}" ContentStringFormat="Id: {0}"></Label>
-                                    <Label Content="{Binding total}"  ContentStringFormat="Total: {0}"></Label>
+                                    <Label Content="{Binding Total}"  ContentStringFormat="Total: {0}"></Label>
                                     <Label Content="{Binding Fecha}"  ContentStringFormat="Hora de pedido: {0}"></Label>
+                                    <Label Content="{Binding Mesa}"  ContentStringFormat="Mesa: {0}"></Label>
                                     <Grid Background="#49E696" Margin="0,0,0,0" >
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition  Width="0.5*"></ColumnDefinition>
@@ -121,6 +122,13 @@
 
                                         </ItemsControl>
                                     </ScrollViewer>
+                                    <Label Margin="0,5,0,0" Padding="0">Notas:</Label>
+                                    <TextBlock   MaxHeight="150" Margin="0,5,0,0" TextWrapping="Wrap" Text="{Binding Notas}">
+                                        <TextBlock.Background>
+                                            <SolidColorBrush Opacity="0.6" Color="White"></SolidColorBrush>
+                                        </TextBlock.Background>
+                                      
+                                    </TextBlock>
                                     <Grid Margin="0,10,0,0">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="0.5*"></ColumnDefinition>
@@ -131,6 +139,7 @@
                                         </Button>
                                         <Button  Command="{Binding Source={x:Reference lista}, Path=Entregado}" CommandParameter="{Binding .}" Margin="2.5,0,0,0" Grid.Column="1" >Entregado</Button>
                                     </Grid>
+                                    
                                 </StackPanel>
                             </Grid>
                         </Border>
